WordPress/WordPress-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: wordpress-service
  namespace: abdallah-default
spec:
  selector:
    app: wordpress
  ports:
    - name: http
      protocol: TCP
      port: 80
