WordPress/WordPress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: abdallah-default
spec:
  tls:
    - hosts:
        - abdallah-wp.oweis.tech
      secretName: wp-app-tls
  rules:
  - host: abdallah-wp.oweis.tech
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wordpress-service
              port:
                number: 80
